Selenium tests for end-to-end flows
Change-Id: I23800a9803ca5dadb99247d851b9b6d764917dce